# abm-housing-bundle

./: .gitignore  LICENSE  README.md  pyproject.toml  reproduce_all.sh
data/: cosmopolitan_grad_share_de.json  cosmopolitan_grad_share_uk.json
outputs/: abm_vs_hank_summary.json  abm_vs_hank_table.csv  adjusted_anchor_band.json  alpha_loc_robustness.json  augmented_phase1_reproducibility.json  augmented_phase2_results.json  augmented_phase2_v2_results.json  augmented_phase4_counterfactual.json  augmented_phase4_uk.json  baseline_diagnostics.json  cosmopolitan_pilot.json  decomposition_headline.json  equal_cost_counterfactual.json  gamma_manifold.json  german_partial_correlation_placebo.json  hank_comparison.md  kr_robustness.json  material_security_results.md  material_security_tuning_log.md  mechanism_definitions_robustness.json  mechanism_diagnostics.json  moments_table.md  o_construction_addendum.json  o_construction_diagnostic.json  phase1_master_baseline.json  robustness_sweep.json  robustness_table.csv  scenario_e_robustness_n50.json  scenario_e_robustness_n50_table.tex  smm_augmented_p50_reduced.json  smm_augmented_reduced.json  smm_margin_optimum.json  smm_optimum.json  smm_results.md  smm_state.pkl  submission_preflight_changelog.md  uk_validation_payload.json  uk_validation_results.md  validation_moments.json  widen_bounds_control.json  (+7 more)
replication/: test_run_log.txt
scripts/: adjusted_anchor_band.py  alpha_loc_robustness.py  audit_parameter_vector.py  baseline_diagnostics.py  compare_abm_hank.py  cosmopolitan_pilot.py  counterfactual_decomposition.py  (+36 more)
(+24 files in other folders)
