[project]
name = "abmhp"
version = "0.2.0"
description = "Agent-based model of housing wealth, reference-dependent dissatisfaction, and the demand for political extremes"
authors = [{name = "Tina Koziol", email = "tina@ceraluna.dev"}]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "scikit-optimize>=0.9",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-xdist>=3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abmhp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
